--- a/requirements.txt
+++ b/requirements.txt
@@ -1,201 +1,6 @@
-accelerate==1.11.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.11.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings @ file:///C:/miniconda3/conda-bld/argon2-cffi-bindings_1757925012741/work
-arrow==1.4.0
-asttokens @ file:///C:/b/abs_9662ywy9fp/croot/asttokens_1743630464377/work
-async-lru @ file:///C:/miniconda3/conda-bld/async-lru_1761121600688/work
-async-timeout==5.0.1
-attrs @ file:///C:/miniconda3/conda-bld/attrs_1762356939015/work
-babel==2.17.0
-beautifulsoup4==4.14.2
-bleach==6.3.0
-blinker==1.9.0
-brotlicffi @ file:///C:/miniconda3/conda-bld/brotlicffi_1762950448512/work
-cachetools==6.2.2
-certifi==2025.11.12
-cffi @ file:///C:/miniconda3/conda-bld/cffi_1761832794697/work
-charset-normalizer @ file:///C:/miniconda3/conda-bld/charset-normalizer_1761744944645/work
-click==8.3.0
-cloudpickle==3.1.2
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
-comm==0.2.3
-contourpy==1.3.2
-cycler==0.12.1
-dacite==1.9.2
-datasets==4.4.1
-debugpy==1.8.17
-decorator @ file:///C:/miniconda3/conda-bld/decorator_1757341256088/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dill==0.4.0
-exceptiongroup @ file:///C:/miniconda3/conda-bld/exceptiongroup_1761560437674/work
-executing @ file:///C:/miniconda3/conda-bld/executing_1757061252959/work
-fastjsonschema==2.21.2
-filelock==3.20.0
-filetype==1.2.0
-Flask==3.1.2
-flask-cors==6.0.1
-fonttools==4.60.1
-fqdn==1.5.1
-frozenlist==1.8.0
-fsspec==2025.10.0
-gitdb==4.0.12
-GitPython==3.1.45
-h11 @ file:///C:/miniconda3/conda-bld/h11_1761931282349/work
-httpcore @ file:///C:/b/abs_25m7_xthp6/croot/httpcore_1748526065845/work
-httpx @ file:///C:/miniconda3/conda-bld/httpx_1760447376159/work
-huggingface-hub==0.36.0
-idna @ file:///C:/miniconda3/conda-bld/idna_1761912044311/work
-ImageHash==4.3.1
-ImageIO==2.37.2
-ipykernel==7.1.0
-ipython==8.37.0
-ipython_pygments_lexers @ file:///C:/b/abs_b66hj1lo19/croot/ipython_pygments_lexers_1744753262043/work
-ipywidgets @ file:///C:/miniconda3/conda-bld/ipywidgets_1761560181476/work
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi @ file:///C:/b/abs_3a2kbnlclc/croot/jedi_1733987412687/work
-Jinja2 @ file:///C:/b/abs_920kup4e6u/croot/jinja2_1741711580669/work
-joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications @ file:///C:/miniconda3/conda-bld/jsonschema-specifications_1762788648330/work
-jupyter @ file:///C:/b/abs_32aohix0i1/croot/jupyter_1737645821205/work
-jupyter-console @ file:///C:/b/abs_82xaa6i2y4/croot/jupyter_console_1680000189372/work
-jupyter-events @ file:///C:/b/abs_9cm3qlticu/croot/jupyter_events_1741184612840/work
-jupyter-lsp==2.3.0
-jupyter_client @ file:///C:/miniconda3/conda-bld/jupyter_client_1762943187574/work
-jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals @ file:///C:/b/abs_adjrm9dtns/croot/jupyter_server_terminals_1744706714294/work
-jupyterlab==4.4.10
-jupyterlab_pygments @ file:///C:/b/abs_d5alfet8m6/croot/jupyterlab_pygments_1741124274578/work
-jupyterlab_server @ file:///C:/miniconda3/conda-bld/jupyterlab_server_1761751441617/work
-jupyterlab_widgets @ file:///C:/b/abs_6566by8dag/croot/jupyterlab_widgets_1752066574111/work
-kaggle==1.7.4.5
-kiwisolver==1.4.9
-lark==1.3.1
-lazy_loader==0.4
-lime==0.2.0.1
-llvmlite==0.44.0
-MarkupSafe==3.0.3
-matplotlib==3.10.0
-matplotlib-inline @ file:///C:/miniconda3/conda-bld/matplotlib-inline_1762779265381/work
-minify_html==0.18.1
-mistune==3.1.4
-mpmath==1.3.0
-multidict==6.7.0
-multimethod==1.12
-multiprocess==0.70.18
-narwhals==2.11.0
-nbclient @ file:///C:/b/abs_a09c4t3h8x/croot/nbclient_1741124030330/work
-nbconvert @ file:///C:/b/abs_c27_60dzt8/croot/nbconvert-meta_1741191385337/work
-nbformat @ file:///C:/b/abs_c2jkw46etm/croot/nbformat_1728050303821/work
-nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
-networkx==3.4.2
-nltk==3.9.2
-notebook==7.4.7
-notebook_shim @ file:///C:/b/abs_9ctyfgpncn/croot/notebook-shim_1741707829491/work
-numba==0.61.0
-numpy==2.1.3
-overrides @ file:///C:/miniconda3/conda-bld/overrides_1762349109560/work
-packaging @ file:///C:/miniconda3/conda-bld/packaging_1761049101700/work
-pandas==2.3.3
-pandas-profiling==3.6.6
-pandocfilters @ file:///C:/miniconda3/conda-bld/pandocfilters_1756977625119/work
-parso @ file:///C:/miniconda3/conda-bld/parso_1762781925562/work
-patsy==1.0.2
-phik==0.12.5
-pillow==12.0.0
-platformdirs @ file:///C:/miniconda3/conda-bld/platformdirs_1762356608986/work
-prometheus_client==0.23.1
-prompt_toolkit @ file:///C:/miniconda3/conda-bld/prompt-toolkit_1761745021230/work
-propcache==0.4.1
-protobuf==6.33.1
-psutil==7.1.3
-pure_eval @ file:///C:/miniconda3/conda-bld/pure_eval_1757067068391/work
-puremagic==1.30
-pyarrow==21.0.0
-pycparser @ file:///C:/miniconda3/conda-bld/pycparser_1757496059965/work
-pydantic==2.12.4
-pydantic_core==2.41.5
-pydeck==0.9.1
-Pygments @ file:///C:/miniconda3/conda-bld/pygments_1762431425987/work
-pyparsing==3.2.5
-PySocks @ file:///C:/miniconda3/conda-bld/pysocks_1761753030270/work
-python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
-python-json-logger==4.0.0
-python-slugify==8.0.4
-pytz==2025.2
-PyWavelets==1.8.0
-pywin32 @ file:///C:/b/abs_6c9w_vp9zi/croot/pywin32_1754670534373/work
-pywinpty==3.0.2
-PyYAML==6.0.3
-pyzmq @ file:///C:/miniconda3/conda-bld/pyzmq_1762375610449/work
-qtconsole @ file:///C:/miniconda3/conda-bld/qtconsole_1758748651953/work
-QtPy @ file:///C:/miniconda3/conda-bld/qtpy_1757531178920/work
-referencing @ file:///C:/miniconda3/conda-bld/referencing_1762536910091/work
-regex==2025.11.3
-requests @ file:///C:/miniconda3/conda-bld/requests_1762359612241/work
-rfc3339-validator @ file:///C:/b/abs_ddfmseb_vm/croot/rfc3339-validator_1683077054906/work
-rfc3986-validator @ file:///C:/b/abs_6e9azihr8o/croot/rfc3986-validator_1683059049737/work
-rfc3987-syntax==1.1.0
-rpds-py @ file:///C:/miniconda3/conda-bld/rpds-py_1762366614812/work
-safetensors==0.6.2
-scikit-image==0.25.2
-scikit-learn==1.7.2
-scipy==1.15.3
-seaborn==0.13.2
-Send2Trash==1.8.3
-sentencepiece==0.2.1
-shap==0.49.1
-six @ file:///C:/b/abs_149wuyuo1o/croot/six_1744271521515/work
-slicer==0.0.8
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.8
-stack_data @ file:///C:/miniconda3/conda-bld/stack_data_1757067051465/work
-statsmodels==0.14.5
 streamlit==1.51.0
-sympy==1.14.0
-tenacity==9.1.2
-terminado @ file:///C:/miniconda3/conda-bld/terminado_1757934960051/work
-text-unidecode==1.3
-threadpoolctl==3.6.0
-tifffile==2025.5.10
-tinycss2 @ file:///C:/b/abs_df38owi5ma/croot/tinycss2_1738337725183/work
-tokenizers==0.22.1
-toml==0.10.2
-tomli==2.3.0
-torch==2.9.1+cpu
-torchaudio==2.9.1+cpu
-torchvision==0.24.1+cpu
-tornado==6.5.2
-tqdm==4.67.1
-traitlets @ file:///C:/b/abs_bfsnoxl4pq/croot/traitlets_1718227069245/work
+torch==2.9.1
 transformers==4.57.1
-typeguard==4.4.4
-typing-inspection==0.4.2
-typing_extensions @ file:///C:/b/abs_ecq8gc0vbm/croot/typing_extensions_1756281142218/work
-tzdata==2025.2
-uri-template==1.3.0
-urllib3 @ file:///C:/b/abs_393g1ayee_/croot/urllib3_1750775481226/work
-visions==0.8.1
-watchdog==6.0.0
-wcwidth==0.2.14
-webcolors==25.10.0
-webencodings==0.5.1
-websocket-client==1.9.0
-Werkzeug==3.1.3
-widgetsnbextension @ file:///C:/miniconda3/conda-bld/widgetsnbextension_1761556853993/work
-win_inet_pton @ file:///C:/miniconda3/conda-bld/win_inet_pton_1761746276406/work
-wordcloud==1.9.4
-xxhash==3.6.0
-yarl==1.22.0
-ydata-profiling==4.17.0
+numpy==2.1.3
+pandas==2.3.3
+lime==0.2.0.1
